--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<span>:</span>
 			<span id="seconds">00</span>
 		</div>
-		<button class="my-button" id="start-button">ПОЕХАЛИ</button>
+		<button class="my-button" id="start-button">ЗАПУСТИТЬ</button>
 	</div>
 	<script src="script.js"></script>
 </body>
