добавление звукового сигнала

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 			<span>:</span>
 			<span id="seconds">00</span>
 		</div>
-		<button class="my-button" id="start-button">ЗАПУСТИТЬ</button>
+		<div id="button-container">
+			<button class="my-button" id="start-button">ЗАПУСТИТЬ</button>
+			<button class="my-button" id="stop-button" onclick="foo()">ОСТАНОВИТЬ</button>
+		</div>
 	</div>
 	<div class="container">
 		<div id="wrapper">
